--- a/web_themes/base/9_scrollbars.css
+++ b/web_themes/base/9_scrollbars.css
@@ -1,13 +1,17 @@
 /* ------------------ */
 /* --- Scrollbars --- */
 /* ------------------ */
+
+body
+{
+	overflow: overlay !important;
+}
+
 ::-webkit-scrollbar
 {
-	height: 12px;
-	width: 14px;
-	background: transparent;
-	z-index: 12;
-	overflow: visible;
+	background: none !important;
+	min-width: 8px !important;
+	width: 8px !important;
 }
 
 ::-webkit-scrollbar-corner
@@ -15,27 +19,37 @@
 	background: #202020;
 }
 
+::-webkit-scrollbar-track
+{
+	background: none !important;
+	margin: 7px !important;
+}
+
 ::-webkit-scrollbar-thumb
 {
-	width: 10px;
-	background-color: var(--scrollbar) !important;
-	border-radius: 10px;
-	z-index: 12;
-	border: 4px solid rgba(0,0,0,0);
-	background-clip: padding-box;
-	transition: background-color .32s ease-in-out;
-	margin: 4px;
-	min-height: 32px;
-	min-width: 32px;
+	background-clip: padding-box !important;
+	background: var(--scrollbar) !important;
+	border-radius: 10px !important;
+	border: 2px solid transparent !important;
+	min-height: 40px !important;
+	min-width: 3px !important;
+	z-index: 12 !important;
+}
+
+html ::-webkit-scrollbar-thumb
+{
+	background-clip: padding-box !important;
 }
 
 ::-webkit-scrollbar-thumb:hover
 {
 	background-color: var(--scrollbar_hover) !important;
+	border: none !important;
 }
 
 ::-webkit-scrollbar-thumb:active
 {
 	background-color: var(--scrollbar_active) !important;
+	border: none !important;
 }
 
